tests/NormalTests/paczka1/fuzzy1/80681396.err
Error in line 11: IY3A7 S667 70,Z
Error in line 6: aVL5 S667 77,0
Error in line 12: FHF4297fOEf S819 64,2
Error in line 18: S667 S458 6,N
Error in line 15: FHF4297fOEf S667 86,5
Error in line 19: IY3A7 S667 221,5
Error in line 34: IY3A7 S458 85,8
